--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ pandas>=2.1.0
 numpy>=1.24.0
 
 # Visualization
-plotly>=5.17.0
+plotly>=5.15.0
 
 # Machine Learning (lightweight for demos)
 scikit-learn>=1.3.0
 
 # Date/Time Utilities
-python-dateutil>=2.8.2 
+python-dateutil>=2.8.2
+
+# HTTP requests for API calls
+requests>=2.31.0 
